@@ -4,10 +4,6 @@
 
 #include <testfwk.h>
 
-#if !defined(__SDCC_z80) && !defined(__SDCC_z180) && !defined(__SDCC_r2k) && !defined(__SDCC_r3ka) && !defined(__SDCC_tlcs90) && !defined(__SDCC_ez80_z80)
-#define __z88dk_fastcall
-#endif
-
 #if !defined(__SDCC_pdk14) && !defined(__SDCC_pdk15) // lack of memory
 float y, z;
 
